--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.3",
-    "yup": "^1.0.2",
-    "yup-phone": "^1.3.2"
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
